<resources>
    <string name="app_name">AnyWork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="create_account">注册帐号</string>
    <string name="login">登录帐号</string>
    <string name="login_others">游客模式</string>
    <string name="sign_up">注册</string>
    <string name="register">帐号注册</string>
    <string name="name">请输入名字</string>
    <string name="phone">请输入常用手机电话</string>
    <string name="password">请输入密码</string>
    <string name="account">请输入邮箱帐号</string>
    <string name="rePassword">请确认密码</string>
    <string name="sign_in">账号登陆</string>
    <string name="email">邮箱</string>
    <string name="forget_password">忘记密码？</string>
    <string name="info">个人信息</string>
    <string name="paper">试卷</string>
    <string name="inform">公告</string>
    <string name="edit">编辑</string>
    <string name="my_name">昵称</string>
    <string name="my_account">帐号</string>
    <string name="account2">请输入帐号</string>
    <string name="phone2">请输入电话号码</string>
    <string name="my_phone">手机号码</string>
    <string name="point">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="tip_load_blank">暂时木有内容呀～～</string>
    <string name="tip_load_error">轻触重新加载～～</string>

</resources>
