<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:clickable="true"
    android:background="@color/AnyWork_primary_dark">

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="@dimen/spacing_big"
        android:text="@string/sign_in"
        style="@style/AnyWork.Theme.TextView2" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/account"
        style="@style/AnyWork.Theme.EditText1"
        android:hint="@string/account"
        android:inputType="textEmailAddress"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/AnyWork.Theme.EditText1"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="15dp"
        android:textColor="@color/sample_blue"
        android:text="@string/forget_password"/>

    <Button
        android:id="@+id/sign_in"
        style="@style/AnyWork.Theme.Button"
        android:layout_marginTop="@dimen/spacing_big"
        android:background="@drawable/bg_btn_yellow"
        android:text="@string/sign_in" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@mipmap/cancel" />

</LinearLayout>